{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 71,
  "lineage": "29aa6de5-77c2-ac81-3945-0f7eca1a05d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d5c68bab01f3496",
            "arn": "arn:aws:ec2:us-west-2:664622204389:instance/i-071d93256cea382f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071d93256cea382f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jsilverio-oregon",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0395be6886e63c811",
            "private_dns": "ip-172-31-9-44.us-west-2.compute.internal",
            "private_ip": "172.31.9.44",
            "public_dns": "ec2-52-12-159-142.us-west-2.compute.amazonaws.com",
            "public_ip": "52.12.159.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-049dd5cd8c3e60b14",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c23db91ba97b40c",
            "tags": {
              "Name": "Terraform Intro 1"
            },
            "tags_all": {
              "Name": "Terraform Intro 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df1beb16634d7296"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d5c68bab01f3496",
            "arn": "arn:aws:ec2:us-west-2:664622204389:instance/i-0f2fd0c1ec2713eda",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2fd0c1ec2713eda",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jsilverio-oregon",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d3c4d9cce422eae7",
            "private_dns": "ip-172-31-5-99.us-west-2.compute.internal",
            "private_ip": "172.31.5.99",
            "public_dns": "ec2-54-184-178-83.us-west-2.compute.amazonaws.com",
            "public_ip": "54.184.178.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf1000b5c87e41f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c23db91ba97b40c",
            "tags": {
              "Name": "Terraform Intro 2"
            },
            "tags_all": {
              "Name": "Terraform Intro 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df1beb16634d7296"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d5c68bab01f3496",
            "arn": "arn:aws:ec2:us-west-2:664622204389:instance/i-047da3ff384b7ac5d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047da3ff384b7ac5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jsilverio-oregon",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09e6e20401a01eb4d",
            "private_dns": "ip-172-31-8-57.us-west-2.compute.internal",
            "private_ip": "172.31.8.57",
            "public_dns": "ec2-54-214-216-77.us-west-2.compute.amazonaws.com",
            "public_ip": "54.214.216.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-075e8586e0ab55ea6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c23db91ba97b40c",
            "tags": {
              "Name": "Terraform Intro 3"
            },
            "tags_all": {
              "Name": "Terraform Intro 3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df1beb16634d7296"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d5c68bab01f3496",
            "arn": "arn:aws:ec2:us-west-2:664622204389:instance/i-0803449898fa4fc12",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0803449898fa4fc12",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jsilverio-oregon",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d5fb653ec18fe073",
            "private_dns": "ip-172-31-10-111.us-west-2.compute.internal",
            "private_ip": "172.31.10.111",
            "public_dns": "ec2-54-218-4-222.us-west-2.compute.amazonaws.com",
            "public_ip": "54.218.4.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0817137e2f0d27280",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c23db91ba97b40c",
            "tags": {
              "Name": "Terraform Intro 4"
            },
            "tags_all": {
              "Name": "Terraform Intro 4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df1beb16634d7296"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh",
            "aws_s3_bucket.dev4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d5c68bab01f3496",
            "arn": "arn:aws:ec2:us-west-2:664622204389:instance/i-04d67627fd9a58e8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d67627fd9a58e8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jsilverio-oregon",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08a120685169c3325",
            "private_dns": "ip-172-31-6-88.us-west-2.compute.internal",
            "private_ip": "172.31.6.88",
            "public_dns": "ec2-52-11-214-179.us-west-2.compute.amazonaws.com",
            "public_ip": "52.11.214.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c77214f9496f8b9f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c23db91ba97b40c",
            "tags": {
              "Name": "Terraform Intro 5"
            },
            "tags_all": {
              "Name": "Terraform Intro 5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df1beb16634d7296"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00dfe2c7ce89a450b",
            "arn": "arn:aws:ec2:us-east-2:664622204389:instance/i-0c29bb46746cd02ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c29bb46746cd02ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jsilverio-ohio",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02063de7bf5a2fc1d",
            "private_dns": "ip-172-31-26-13.us-east-2.compute.internal",
            "private_ip": "172.31.26.13",
            "public_dns": "ec2-3-19-241-14.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.241.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ea14bd3df090ed8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-80bd76fd",
            "tags": {
              "Name": "Terraform Intro 6"
            },
            "tags_all": {
              "Name": "Terraform Intro 6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ebde13ec3dd5417c"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-homologacao",
            "aws_security_group.acesso-ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00dfe2c7ce89a450b",
            "arn": "arn:aws:ec2:us-east-2:664622204389:instance/i-0167c1ae3a959700b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0167c1ae3a959700b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jsilverio-ohio",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-044f68e4616f487ed",
            "private_dns": "ip-172-31-30-111.us-east-2.compute.internal",
            "private_ip": "172.31.30.111",
            "public_dns": "ec2-18-221-142-129.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.142.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03d6b57edaacdaf8a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-80bd76fd",
            "tags": {
              "Name": "Terraform Intro 7"
            },
            "tags_all": {
              "Name": "Terraform Intro 7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-19197754"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:664622204389:security-group/sg-0df1beb16634d7296",
            "description": "acesso-ssh",
            "egress": [],
            "id": "sg-0df1beb16634d7296",
            "ingress": [
              {
                "cidr_blocks": [
                  "191.32.154.79/32",
                  "191.32.154.79/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": "",
            "owner_id": "664622204389",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "tags_all": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-08967e5ae2acccae8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-us-east-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:664622204389:security-group/sg-0ebde13ec3dd5417c",
            "description": "acesso-ssh",
            "egress": [],
            "id": "sg-0ebde13ec3dd5417c",
            "ingress": [
              {
                "cidr_blocks": [
                  "191.32.154.79/32",
                  "191.32.154.79/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": "",
            "owner_id": "664622204389",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "tags_all": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-91c6acfa"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}